--- a/app/views/valuations/_header.html.erb
+++ b/app/views/valuations/_header.html.erb
@@ -10,6 +10,10 @@
       <span class="text-2xl text-primary">
         <%= format_money entry.amount_money %>
       </span>
+
+      <span class="text-lg text-secondary">
+        <%= entry.currency %>
+      </span>
     </h3>
   </div>
 
